--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -377,6 +377,11 @@
                             <i class="fas fa-chart-pie me-1"></i>Budgets
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'calendar' %}">
+                            <i class="fas fa-calendar-alt me-1"></i>Calendar
+                        </a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
