--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -382,6 +382,11 @@
                             <i class="fas fa-calendar-alt me-1"></i>Calendar
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'ai_assistant:chat_assistant' %}">
+                            <i class="fas fa-robot me-1"></i>AI Assistant
+                        </a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
